Use box-drawing characters in LoopySolverTest
+ enabled Java 13 preview features for text blocks