@@ -69,6 +69,7 @@
 				<version>3.8.1</version>
 				<configuration>
 					<release>13</release>
+					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
